--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.8",
+    "@mui/x-date-pickers": "^6.13.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "dayjs": "^1.11.9",
     "formik": "^2.4.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
